<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
    <name>libtorch</name>
    <version>0.0.0</version>
    <description>libtorch</description>
    <maintainer email="hhuangat@gmail.ust.hk">hyhuang</maintainer>
    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <build_depend>CUDA</build_depend>
    <build_export_depend>CUDA</build_export_depend>

</package>
